fixed the labels on the carosel and the links on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,8 +64,13 @@ navbar ul li a:active {
 }
 
 .carousel-caption {
-  color: black;
-  background-color: white;
+  color: white;
+  background-color: black;
+  opacity: 0.5;
+}
+
+.carousel-caption:hover {
+  opacity: 0.9;
 }
 
 #profile {
@@ -172,6 +177,11 @@ hr {
   #myName {
     top: 40%;
     font-size: 4em;
+  }
+}
+@media only screen and (max-width: 600px) {
+  navbar li {
+    margin: 2em;
   }
 }
 @media only screen and (max-width: 425px) {
